# WindowsRichPresence

./: .gitignore  CMakeLists.txt  Includes.h  README.md  main.cpp
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
Logging/: Logging.cpp  Logging.hpp
RichPresence/: RichPresence.cpp  RichPresence.hpp
RichPresence/libs/: discord-rpc.lib
Settings/: Settings.cpp  Settings.hpp
Update/: Update.cpp  Update.hpp
Utilities/: ASCII.hpp  Functions.cpp  Functions.hpp
